cmake_minimum_required(VERSION 3.25)
project(algorithm_practise)

set(CMAKE_CXX_STANDARD 14)

include_directories(aaf)

add_executable(algorithm_practise
        aaf/qewqwe.cpp
        aaf/qewqwe.h "loong's code/leetcode/editor/cn/[27]Remove Element.cpp" "loong's code/leetcode/editor/cn/[27]Remove Element.cpp")
