cmake_minimum_required(VERSION 3.25)
project(algorithm_practise)

set(CMAKE_CXX_STANDARD 14)

include_directories(loong's code/leetcode/editor/cn)

add_executable(algorithm_practise
        "loong's code/leetcode/editor/cn/[27]Remove Element.cpp"
        "loong's code/leetcode/editor/cn/main.cpp"
        "loong's code/leetcode/editor/cn/[1019]Next Greater Node In Linked List.cpp" "loong's code/leetcode/editor/cn/main.h")
